...
    android:layout_gravity="center_horizontal">

    <!-- Measurement/variable input. Offsetted -2dp so that the overscroll fade starts right under the edittext -->
    <com.quantimodo.tools.views.ScrollViewExt
        android:id="@+id/svCardsContainer"
        android:fillViewport="true"
        android:layout_below="@+id/etVariableName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
...
        android:layout_alignTop="@id/etVariableName"
        android:layout_alignBottom="@id/etVariableName"
        android:visibility="gone" />

    <!-- Autocomplete listview -->
    <ListView
        android:id="@+id/lvVariableSuggestions"
        android:layout_below="@id/etVariableName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
...
