...
        android:text="@string/tracking_variable"
        android:textSize="24sp"
        android:textColor="@color/card_title"
        android:fontFamily="sans-serif-light"/>

    <EditText
        android:id="@+id/etVariableNameNew"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/tracking_variablename"
        android:textColorHint="#CCCCCC"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tracking_combination_sum"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rbVariableCombinationOperationAverage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tracking_combination_average"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
...
